initial postgres->sqlite3 refactoring commit; before swagger re-generation;
