# swagger.yaml
@@ -1422,62 +1422,6 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
-  /clusters/{cluster_id}/hosts/{host_id}/installer-args:
-    patch:
-      tags:
-        - installer
-      summary: Updates an OpenShift bare metal host.
-      operationId: UpdateHostInstallerArgs
-      parameters:
-        - in: path
-          name: cluster_id
-          type: string
-          format: uuid
-          required: true
-        - in: path
-          name: host_id
-          type: string
-          format: uuid
-          required: true
-        - in: body
-          name: installer-args-params
-          required: true
-          schema:
-            $ref: '#/definitions/installer-args-params'
-      responses:
-        201:
-          description: Success.
-          schema:
-            $ref: '#/definitions/host'
-        400:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        401:
-          description: Unauthorized.
-          schema:
-            $ref: '#/definitions/infra_error'
-        403:
-          description: Forbidden.
-          schema:
-            $ref: '#/definitions/infra_error'
-        404:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        405:
-          description: Method Not Allowed.
-          schema:
-            $ref: '#/definitions/error'
-        409:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-        500:
-          description: Error.
-          schema:
-            $ref: '#/definitions/error'
-
   /clusters/{cluster_id}/hosts/{host_id}/progress:
     put:
       tags:
@@ -2672,19 +2616,6 @@ definitions:
         type: string
         description: Json formatted string containing the user overrides for the host's pointer ignition
         example: '{"ignition": {"version": "3.1.0"}, "storage": {"files": [{"path": "/tmp/example", "contents": {"source": "data:text/plain;base64,aGVscGltdHJhcHBlZGluYXN3YWdnZXJzcGVj"}}]}}'
-      installer_args:
-        type: string
-
-
-  installer-args-params:
-    type: object
-    properties:
-      args:
-        description: List of additional arguments passed to coreos-installer
-        example: ["--append-karg", "ip=192.0.2.2::192.0.2.254:255.255.255.0:core0.example.com:enp1s0:none", "--save-partindex", "1", "-n"]
-        type: array
-        items:
-          type: string
 
   steps:
     type: object
@@ -3111,12 +3042,12 @@ definitions:
       install_started_at:
         type: string
         format: date-time
-        x-go-custom-tag: gorm:"type:timestamp with time zone;default:'2000-01-01 00:00:00z'"
+        x-go-custom-tag: gorm:"type:timestamp with time zone"
         description: The time that this cluster started installation.
       install_completed_at:
         type: string
         format: date-time
-        x-go-custom-tag: gorm:"type:timestamp with time zone;default:'2000-01-01 00:00:00z'"
+        x-go-custom-tag: gorm:"type:timestamp with time zone"
         description: The time that this cluster completed installation.
       host_networks:
         type: array
